exports[`as a function 1`] = `
"
import dedent from \"../macro\";

dedent(\`
  some stuff
\`);

      ↓ ↓ ↓ ↓ ↓ ↓

\"some stuff\";
"
`;

exports[`as a template string 1`] = `
"
import dedent from \"../macro\";

dedent\`
  some stuff
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"some stuff\";
"
`;

exports[`evaluated 1`] = `
"
import dedent from \"../macro\";
import { line, second } from \"../external\";

dedent\`
  first \${line}
    \${second}
    third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

import { line, second } from \"../external\";

\`first \${line}
  \${second}
  third\`;
"
`;

exports[`explicit newline 1`] = `
"
import dedent from \"../macro\";

dedent\`
  <p>
    Hello world!
  </p>

\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"<p>\\n  Hello world!\\n</p>\";
"
`;

exports[`explicit newlines 1`] = `
"
import dedent from \"../macro\";

dedent\`
  \\n<p>
    Hello world!
  </p>\\n
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"\\n<p>\\n  Hello world!\\n</p>\\n\";
"
`;

exports[`expressions 1`] = `
"
import dedent from \"../macro\";

dedent\`
  first line
    second
    third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"first line\\n  second\\n  third\";
"
`;

exports[`multiple indentations 1`] = `
"
import dedent from \"../macro\";

dedent\`
    first
      second
          third
\`;

      ↓ ↓ ↓ ↓ ↓ ↓

\"first\\n  second\\n      third\";
"
`;
